melhorando codigo